<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/account_container_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.homepage.AccountFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/account_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/main_container_dark"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">


		<Button
			android:id="@+id/account_btn_logout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="20dp"
			android:backgroundTint="@color/primary_color"
			android:text="Log out"
			android:textColor="@color/primary_text_color"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/account_iv_profile"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/__aa_profile_background"
			android:contentDescription="avatar"
			android:src="@drawable/__aa_default_user_icon"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/account_txt_role"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/placeholder_account_role"
			android:textColor="@color/primary_text_color"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/account_iv_profile" />

		<TextView
			android:id="@+id/account_txt_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/placeholder_account_name"
			android:textColor="@color/primary_text_color"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/account_txt_role" />

		<LinearLayout
			android:id="@+id/account_component_choice"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.444"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/account_txt_name"
			app:layout_constraintVertical_bias="0.029">


			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/account_btn_favorite"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:clickable="true">

				<TextView
					android:id="@+id/account_txt_favorite"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:text="@string/txt_favorite"
					android:textColor="@color/secondary_text_color"
					android:textSize="16sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


				<ImageView
					android:id="@+id/account_btn_favorite_arrow"
					android:layout_width="6.13dp"
					android:layout_height="10.93dp"
					android:layout_marginEnd="10dp"
					android:contentDescription="arrow"
					android:src="@drawable/__aa_btn_arrow_right"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/account_btn_edit_account"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:clickable="true">

				<TextView
					android:id="@+id/account_txt_edit_account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:text="@string/txt_edit_account"
					android:textColor="@color/secondary_text_color"
					android:textSize="16sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


				<ImageView
					android:id="@+id/account_btn_edit_account_arrow"
					android:layout_width="6.13dp"
					android:layout_height="10.93dp"
					android:layout_marginEnd="10dp"
					android:contentDescription="arrow"
					android:src="@drawable/__aa_btn_arrow_right"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/account_btn_settings"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:clickable="true">

				<TextView
					android:id="@+id/account_txt_settings"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:text="@string/txt_settings"
					android:textColor="@color/secondary_text_color"
					android:textSize="16sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


				<ImageView
					android:id="@+id/account_btn_settings_arrow"
					android:layout_width="6.13dp"
					android:layout_height="10.93dp"
					android:layout_marginEnd="10dp"
					android:contentDescription="arrow"
					android:src="@drawable/__aa_btn_arrow_right"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/account_btn_help"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:clickable="true">

				<TextView
					android:id="@+id/account_txt_help"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:text="@string/txt_help"
					android:textColor="@color/secondary_text_color"
					android:textSize="16sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


				<ImageView
					android:id="@+id/account_btn_help_arrow"
					android:layout_width="6.13dp"
					android:layout_height="10.93dp"
					android:layout_marginEnd="10dp"
					android:contentDescription="arrow"
					android:src="@drawable/__aa_btn_arrow_right"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/account_btn_timer"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:clickable="true">

				<TextView
					android:id="@+id/account_txt_timer"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:text="@string/txt_timer"
					android:textColor="@color/secondary_text_color"
					android:textSize="16sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


				<ImageView
					android:id="@+id/account_btn_timer_arrow"
					android:layout_width="6.13dp"
					android:layout_height="10.93dp"
					android:layout_marginEnd="10dp"
					android:contentDescription="arrow"
					android:src="@drawable/__aa_btn_arrow_right"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</LinearLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>