<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/messages_messages_container_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:background="@drawable/__aa_container_light_box"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/messages_messages_iv_profile"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/__aa_profile_background"
            android:contentDescription="profile"
            android:src="@drawable/__aa_default_user_icon" />

        <LinearLayout
            android:id="@+id/messages_messages_component"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messages_messages_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/placeholder_account_name"
                android:textColor="@color/primary_text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/messages_messages_txt_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/placeholder_account_name"
                android:textColor="@color/secondary_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/messages_messages_txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/placeholder_derived_date"
                android:textColor="@color/tertiary_text_color"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/messages_messages_btn_course"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/__aa_btn_arrow_right" />
    </LinearLayout>

    <TextView
        android:id="@+id/message_message_txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/placeholder_messages_messages_content"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp" />


</LinearLayout>