<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/courses_container_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.homepage.CoursesFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/main_container_dark"
		android:orientation="vertical">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center">

			<TextView
				android:id="@+id/courses_txt_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="44dp"
				android:layout_marginTop="50dp"
				android:text="@string/title_courses"
				android:textColor="@color/primary_text_color"
				android:textSize="24sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/courses_iv_profile"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_marginTop="40dp"
				android:layout_marginEnd="44dp"
				android:background="@drawable/__aa_profile_background"
				android:contentDescription="profile"
				android:src="@drawable/__aa_default_user_icon"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/recommendations"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:visibility="gone">

			<ImageView
				android:id="@+id/painting"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="175dp"
				android:contentDescription="painting"
				android:src="@drawable/painting"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/language"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="language"
				android:src="@drawable/language"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<LinearLayout
			android:id="@+id/courses_component_choose_course"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="20dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/courses_txt_choose_course"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:text="@string/txt_choose_course"
					android:textColor="@color/primary_text_color"
					android:textSize="18sp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<Space
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1" />

				<TextView
					android:id="@+id/courses_btn_create_course"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="20dp"
					android:layout_marginTop="16dp"
					android:clickable="true"
					android:text="@string/btn_create_course"
					android:textColor="@color/primary_color"
					android:textSize="18sp"
					android:visibility="gone"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/courses_component_tabs"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="20dp"
				android:layout_marginTop="10dp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">


				<Button
					android:id="@+id/courses_btn_all"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="5dp"
					android:layout_weight="1"
					android:backgroundTint="@color/deselected_color"
					android:text="All"
					android:textColor="@color/primary_text_color" />

				<Button
					android:id="@+id/courses_btn_popular"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="5dp"
					android:layout_weight="1"
					android:backgroundTint="@color/deselected_color"
					android:text="Popular"
					android:textColor="@color/primary_text_color" />

				<Button
					android:id="@+id/courses_btn_new"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="5dp"
					android:layout_weight="1"
					android:backgroundTint="@color/deselected_color"
					android:text="New"
					android:textColor="@color/primary_text_color" />

			</LinearLayout>

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical" >

					<TextView
						android:id="@+id/course_txt_no_courses"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:gravity="center"
						android:paddingTop="10dp"
						android:text="@string/emp_courses"
						android:textColor="@color/secondary_text_color"
						android:textSize="16sp" />

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/course_list_courses"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginHorizontal="20dp"
						android:layout_marginTop="10dp"
						tools:listitem="@layout/list_course_list" />
				</LinearLayout>
			</ScrollView>


		</LinearLayout>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>